--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 							<img src="assets/img/blog-2.jpg" alt="blog image" class="blog__img">
 							<span class="blog__subtitle">SEPTEMBER 19, 2020 / IN PHOTOGRAPHY, UNCATEGORIZED / BY ADMIN</span>
 							<h3 class="blog__title">THIS YEAR'S MODEL</h3>
-							<p class="blog__description">Lorem ipsum dolor, sit, amet consectetur adipisicing elit. Inventore possimus nam soluta iste doloremque fugiat?</p>
+							<p class="blog__description">Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Quae nesciunt harum voluptates molestiae, et aliquid!</p>
 							<a href="#" class="blog__button">READ MORE</a>
 						</div>
 					</div>
@@ -667,7 +667,7 @@
 							<img src="assets/img/blog-3.jpg" alt="blog image" class="blog__img">
 							<span class="blog__subtitle">SEPTEMBER 17, 2020 / IN DESIGN, UNCATEGORIZED / BY ADMIN</span>
 							<h3 class="blog__title">MEN'S WATCHES FROM TOP BRANDS</h3>
-							<p class="blog__description">Lorem ipsum dolor sit, amet consectetur, adipisicing elit. Quae, beatae perspiciatis, dignissimos optio aut consequuntur!</p>
+							<p class="blog__description">Lorem, ipsum dolor sit amet consectetur, adipisicing elit. Quae nesciunt harum voluptates molestiae, et aliquid!</p>
 							<a href="#" class="blog__button">READ MORE</a>
 						</div>
 					</div>
@@ -774,6 +774,12 @@
 		<span class="footer__note container">This website is demo for testing purpose, no orders shall be fulfilled.</span>
 	</footer>
 	<!-- ===== end footer -->
+
+	<!-- ===== SCROLL UP ===== -->
+	<a href="#" class="scrollup" id="scroll-up">
+		<i class="bx bx-up-arrow-alt"></i>
+	</a>
+	<!-- ===== end scroll up ===== -->
 
 	<!-- ===== SCROLLREVEAL ===== -->
 	<script src="assets/js/scrollreveal.min.js"></script>
