--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
 			</div>
 		</div>
 
-		<p class="footer__copy container">&#169;2022 - By <a href="https://nelly-yusnita.github.io/portfolio/" class="footer__portfolio-link" target="_blank">Nelly Yusnita</a></p>
+		<p class="footer__copy container">&#169;2022 - By <a href="https://nelly-yusnita.github.io/miniportfolio/" class="footer__portfolio-link" target="_blank">Nelly Yusnita</a></p>
 
 		<span class="footer__note container">This website is demo for testing purpose, no orders shall be fulfilled.</span>
 	</footer>
